Allow changing font options

--- a/samples/us-population.html
+++ b/samples/us-population.html
@@ -45,7 +45,11 @@
 						},
 						spacing: 2,
 						borderWidth: 0.5,
-						borderColor: 'rgba(160,160,160,0.5)'
+						borderColor: 'rgba(160,160,160,0.5)',
+						fontColor: '#FFF',
+						fontFamily: 'Tahoma',
+						fontSize: 8,
+						fontStyle: 'bold'
 					}]
 				},
 				options: {
