Chart.js v3 compatibility

--- a/samples/basic.html
+++ b/samples/basic.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Basic treemap sample</title>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha"></script>
 	<script src="utils.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	</link>
@@ -16,27 +16,32 @@
 
 
 	<script>
+		/* global Utils, Chart */
 		function colorFromValue(value, border) {
-			var alpha = (1 + Math.log(value)) / 5;
-			var color = 'purple';
+			let alpha = (1 + Math.log(value)) / 5;
+			const color = 'purple';
 			if (border) {
 				alpha += 0.01;
 			}
-			return Color(color)
+			return Chart.helpers.color(color)
 				.alpha(alpha)
 				.rgbString();
 		}
 
-		Utils.load(function() {
-			var ctx = document.getElementById("chart-area").getContext("2d");
-			window.myTreeMap = new Chart(ctx, {
+		Utils.load(() => {
+			const ctx2d = document.getElementById('chart-area').getContext('2d');
+			window.myTreeMap = new Chart(ctx2d, {
 				type: 'treemap',
 				data: {
 					datasets: [{
 						label: 'Basic treemap',
-						data: [15, 6, 6, 5, 4, 3, 2, 2],
-						backgroundColor: function(ctx) {
-							return colorFromValue(ctx.dataset.data[ctx.dataIndex]);
+						tree: [15, 6, 6, 5, 4, 3, 2, 2],
+						backgroundColor(ctx) {
+							const item = ctx.dataset.data[ctx.dataIndex];
+							if (!item) {
+								return;
+							}
+							return colorFromValue(item.v);
 						},
 						spacing: 0.1,
 						borderWidth: 2,
@@ -53,7 +58,7 @@
 						display: false
 					}
 				}
-			})
+			});
 		});
 	</script>
 </body>
