--- a/samples/us-switchable.html
+++ b/samples/us-switchable.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>US population, area or population/area by state</title>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-beta.3"></script>
 	<script src="utils.js"></script>
 	<script src="us_stats_by_state.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
