--- a/samples/dividers.html
+++ b/samples/dividers.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Basic treemap sample with dividers</title>
-	<script src="utils.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	</link>
+	<script src="/utils.js"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
