--- a/samples/us-switchable.html
+++ b/samples/us-switchable.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>US population, area or population/area by state</title>
-	<script src="utils.js"></script>
-	<script src="us_stats_by_state.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	</link>
+	<script src="/utils.js"></script>
+	<script src="/us_stats_by_state.js"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
