maintains the same URLs in the samples

--- a/samples/us-population.html
+++ b/samples/us-population.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>US population by state</title>
-	<script src="./utils.js"></script>
-	<script src="./us_stats_by_state.js"></script>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<script src="/utils.js"></script>
+	<script src="/us_stats_by_state.js"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
@@ -50,34 +50,17 @@
 						spacing: 2,
 						borderWidth: 0.5,
 						borderColor: 'rgba(160,160,160,0.5)',
-						captions: {
-							color: '#FFF',
-							hoverColor: '#F0B90B',
-							font: {
-								family: 'Tahoma',
-								size: 8,
-								style: 'bold'
-							},
-							hoverFont: {
-								family: 'Tahoma',
-								size: 8,
-								style: 'bold'
-							}
+						color: '#FFF',
+						hoverColor: '#F0B90B',
+						font: {
+							family: 'Tahoma',
+							size: 8,
+							style: 'bold'
 						},
-						labels: {
-							display: true, 
-							color: '#FFF',
-							hoverColor: '#F0B90B',
-							font: {
-								family: 'Tahoma',
-								size: 8,
-								style: 'bold'
-							},
-							hoverFont: {
-								family: 'Tahoma',
-								size: 8,
-								style: 'bold'
-							}
+						hoverFont: {
+							family: 'Tahoma',
+							size: 8,
+							style: 'bold'
 						}
 					}]
 				},
