--- a/samples/us-switchable.html
+++ b/samples/us-switchable.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>US population, area or population/area by state</title>
-	<script src="./utils.js"></script>
-	<script src="./us_stats_by_state.js"></script>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<script src="/utils.js"></script>
+	<script src="/us_stats_by_state.js"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
@@ -44,9 +44,6 @@
 						borderWidth: 0.5,
 						borderColor: 'rgba(200,200,200,1)',
 						hoverBackgroundColor: 'rgba(220,230,220,0.5)',
-						labels: {
-							display: true
-						}
 					}]
 				},
 				options: {
